# ai-video-automation

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DEPLOYMENT-QUICKSTART.md  DEPLOYMENT.md  DOCKER-LOCAL.md  Dockerfile  LOCAL-SETUP.md  README.md  SETUP-SECRETS.md  SSL-SETUP.md  SUPABASE-SETUP.md  check_ddg.py  check_ddgs.py  cron_setup.py  docker-compose.prod.yml  docker-compose.yml  docker-local.sh  local_runner.py  main.py  main_v2.py  platform_migration.sql  pyproject.toml  save_video_data.py  setup-local-env.sh  supabase_migration.sql  task.md  test_video_apis.py  validate_env.py  verify-local-setup.sh  verify_refactor.py
.claude/: settings.local.json
.github/workflows/: backend-ci-cd.yml  (+15 more)
certbot/: Dockerfile  renew-certs.sh
deploy/: deploy.sh  setup-droplet.sh
docs/: AUTH-SETUP-QUICKSTART.md  CONTAINERIZED-DEPLOYMENT.md  CRON-API.md  DEPLOYMENT-SETUP.md  FREE-DOMAIN-SETUP.md  GOOGLE-AUTH-SETUP.md  IMPLEMENTATION-SUMMARY.md  MAIN-PIPELINE-CRON.md  SERVER-ACTIONS-SECURITY.md  SERVER-ACTIONS-SUMMARY.md  TOKEN-RETRIEVAL.md  VINGINE-DEPLOYMENT-SUMMARY.md  VINGINE-DOMAIN-SETUP.md  VINGINE-UI-FIX.md
nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf  nginx.conf.template  vingine-http-only.conf.template  vingine.conf.template
scripts/: configure-vingine-existing-nginx.sh  configure-vingine-host.sh  get-github-secrets.sh  init-letsencrypt.sh  setup-backend-droplet.sh  setup-ssl-vingine.sh  setup-vingine-domain.sh  update-nginx-full-stack.sh
web/: .env.example  .env.production  .eslintrc.json  Dockerfile  package-lock.json  package.json  validate_env.js
(+98 files in other folders)
